--- a/accountscpd/tax_compliance.html
+++ b/accountscpd/tax_compliance.html
@@ -4,10 +4,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Tax Compliance Risks & Mitigations</title>
+
 <style>
 * {box-sizing: border-box; margin: 0; padding: 0;}
 html, body {background: #f8f9fa; min-height: 100vh;}
-body {font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; padding: 20px; opacity: 1; visibility: visible;}
+body {font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; padding: 20px;}
 .compliance-container {max-width: 1200px; margin: 0 auto;}
 .header {text-align: center; margin-bottom: 40px;}
 .title {font-size: 28px; font-weight: 700; color: #333; margin-bottom: 10px;}
@@ -16,233 +17,204 @@ body {font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-s
 .legend-item {display: flex; align-items: center; gap: 8px; font-size: 13px; font-weight: 600;}
 .legend-badge {width: 20px; height: 20px; border-radius: 4px;}
 .legend-badge.critical {background: #e74c3c;}
-.legend-badge.moderate {background: #ffc107;}
+
 .cards-grid {display: grid; grid-template-columns: repeat(3, 1fr); gap: 15px;}
+
 .compliance-card {perspective: 1000px; cursor: pointer;}
 .card-inner {position: relative; width: 100%; min-height: 380px; transition: transform 0.6s; transform-style: preserve-3d;}
 .compliance-card.flipped .card-inner {transform: rotateY(180deg);}
-.card-front, .card-back {position: absolute; width: 100%; height: 100%; backface-visibility: hidden; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.15); padding: 20px; display: flex; flex-direction: column; justify-content: flex-start;}
-.card-front {background: white; border: 3px solid #e9ecef;}
+
+.card-front,
+.card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  border-radius: 12px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.card-front {background: #fff; border: 3px solid #e9ecef;}
 .card-back {transform: rotateY(180deg);}
-.card-back.critical {background: linear-gradient(135deg, #4caf50, #66bb6a); color: white;}
-.card-back.moderate {background: linear-gradient(135deg, #4caf50, #66bb6a); color: white;}
+.card-back.critical {background: linear-gradient(135deg, #4caf50, #66bb6a); color: #fff;}
+
 .risk-icon {font-size: 40px; text-align: center; margin-bottom: 15px;}
 .risk-name {font-size: 18px; font-weight: 700; text-align: center; color: #333; margin-bottom: 20px;}
+.risk-description {font-size: 13px; color: #666; text-align: center; margin-bottom: 10px;}
 .click-instruction {font-size: 12px; text-align: center; color: #999; margin-top: auto;}
-.status-badge {display: inline-block; padding: 6px 12px; border-radius: 12px; font-size: 11px; font-weight: 700; text-transform: uppercase; margin-bottom: 12px;}
+
+.status-badge {display: inline-block; padding: 6px 12px; border-radius: 12px; font-size: 11px; font-weight: 700; margin-bottom: 12px;}
 .status-badge.critical {background: rgba(255,255,255,0.3);}
-.back-content {font-size: 13px; line-height: 1.6; flex: 1; overflow-y: auto;}
+
+.back-content {font-size: 13px; line-height: 1.6; overflow-y: auto;}
 .back-content-section {margin-bottom: 14px;}
-.back-content-title {font-size: 12px; font-weight: 700; text-transform: uppercase; letter-spacing: 0.5px; margin-bottom: 8px; opacity: 0.95;}
-.back-content ul {list-style: none; padding: 0; margin: 0;}
+.back-content-title {font-size: 12px; font-weight: 700; margin-bottom: 8px;}
+.back-content ul {list-style: none;}
 .back-content li {padding-left: 18px; position: relative; margin-bottom: 5px; font-size: 12px;}
-.back-content li:before {content: "✓"; position: absolute; left: 0; font-weight: 700;}
-.risk-description {font-size: 13px; color: #666; line-height: 1.5; text-align: center; margin-bottom: 10px;}
+.back-content li::before {content: "✓"; position: absolute; left: 0; font-weight: 700;}
+
 @media (max-width: 1024px) {
-.cards-grid {grid-template-columns: repeat(2, 1fr);}
+  .cards-grid {grid-template-columns: repeat(2, 1fr);}
 }
 @media (max-width: 768px) {
-.cards-grid {grid-template-columns: 1fr;}
-.compliance-card {height: auto; min-height: 400px;}
+  .cards-grid {grid-template-columns: 1fr;}
 }
 </style>
 </head>
+
 <body>
 <div class="compliance-container">
-<div class="header">
-<h1 class="title">Tax Compliance Risks & Mitigations</h1>
-<p class="subtitle">Click each card to reveal how to prevent this risk</p>
-</div>
-<div class="legend">
-<div class="legend-item"><div class="legend-badge critical"></div><span>🔴 Paired with Mitigation Strategy</span></div>
-</div>
-<div class="cards-grid">
+  <div class="header">
+    <h1 class="title">Tax Compliance Risks & Mitigations</h1>
+    <p class="subtitle">Click each card to reveal how to prevent this risk</p>
+  </div>
 
-<!-- Card 1: Missed Deadlines → Set Personal Deadlines -->
-<div class="compliance-card" onclick="this.classList.toggle('flipped')">
-<div class="card-inner">
-<div class="card-front">
-<div class="risk-icon">⏰</div>
-<div class="risk-name">Missed Deadlines</div>
-<div class="risk-description">Late submission = automatic £100+ penalty, plus interest charges on unpaid tax</div>
-<div class="click-instruction">Click to see how to prevent</div>
-</div>
-<div class="card-back critical">
-<div class="status-badge critical">✅ Mitigation Strategy</div>
-<div class="back-content">
-<div class="back-content-section">
-<div class="back-content-title">Setting Personal Deadlines</div>
-<ul>
-<li>Set personal deadline: 31 December (not 31 January)</li>
-<li>Creates 1-month buffer before official deadline</li>
-<li>Accounts for software issues or complications</li>
-<li>Calendar reminder: 1 November to start preparation</li>
-<li>Complete draft by 10 December</li>
-<li>Final review by 20 December</li>
-<li>Submit by 31 December</li>
-<li>Set up payment plan before 31 January</li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-</div>
+  <div class="legend">
+    <div class="legend-item">
+      <div class="legend-badge critical"></div>
+      <span>🔴 Paired with Mitigation Strategy</span>
+    </div>
+  </div>
 
-<!-- Card 2: Inaccurate Returns → Maintain Records & Use Software -->
-<div class="compliance-card" onclick="this.classList.toggle('flipped')">
-<div class="card-inner">
-<div class="card-front">
-<div class="risk-icon">❌</div>
-<div class="risk-name">Inaccurate Returns</div>
-<div class="risk-description">Errors from poor records, mathematical mistakes, or expense misunderstanding can trigger penalties or HMRC investigation</div>
-<div class="click-instruction">Click to see how to prevent</div>
-</div>
-<div class="card-back critical">
-<div class="status-badge critical">✅ Mitigation Strategy</div>
-<div class="back-content">
-<div class="back-content-section">
-<div class="back-content-title">Comprehensive Record-Keeping</div>
-<ul>
-<li>Implement systematic bookkeeping from day one</li>
-<li>Choose software: Wave, Xero, FreshBooks</li>
-<li>Automated calculations eliminate math errors</li>
-<li>Record all income immediately</li>
-<li>Save every receipt and invoice</li>
-<li>Categorize expenses systematically</li>
-<li>Double-check all figures before submission</li>
-<li>Consider accountant review of return</li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-</div>
+  <div class="cards-grid">
 
-<!-- Card 3: Inadequate Records → Organize & Backup -->
-<div class="compliance-card" onclick="this.classList.toggle('flipped')">
-<div class="card-inner">
-<div class="card-front">
-<div class="risk-icon">📋</div>
-<div class="risk-name">Inadequate Record-Keeping</div>
-<div class="risk-description">HMRC requires records for 5 years. Poor records prevent defending your figures and result in estimated assessments with no appeal</div>
-<div class="click-instruction">Click to see how to prevent</div>
-</div>
-<div class="card-back critical">
-<div class="status-badge critical">✅ Mitigation Strategy</div>
-<div class="back-content">
-<div class="back-content-section">
-<div class="back-content-title">Organize & Maintain Records</div>
-<ul>
-<li>Keep receipts and invoices for 5+ years minimum</li>
-<li>Use cloud storage for digital backup</li>
-<li>Organize records by category and date</li>
-<li>Monthly reconciliation with bank statements</li>
-<li>Annual backup and archive process</li>
-<li>Keep separate folders for each tax year</li>
-<li>Label and date all original documents</li>
-<li>Consider physical filing system as backup</li>
-</ul>
-</div>
-</div>
-</div>
-</div>
+    <!-- CARD 1 -->
+    <div class="compliance-card" onclick="this.classList.toggle('flipped')">
+      <div class="card-inner">
+        <div class="card-front">
+          <div class="risk-icon">⏰</div>
+          <div class="risk-name">Missed Deadlines</div>
+          <div class="risk-description">Late submission = automatic £100+ penalty</div>
+          <div class="click-instruction">Click to see how to prevent</div>
+        </div>
+        <div class="card-back critical">
+          <div class="status-badge critical">✅ Mitigation Strategy</div>
+          <div class="back-content">
+            <div class="back-content-section">
+              <div class="back-content-title">Setting Personal Deadlines</div>
+              <ul>
+                <li>Set personal deadline: 31 December</li>
+                <li>One-month buffer</li>
+                <li>Calendar reminders</li>
+                <li>Submit early</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-<!-- Card 4: Failure to Register → Register Immediately -->
-<div class="compliance-card" onclick="this.classList.toggle('flipped')">
-<div class="card-inner">
-<div class="card-front">
-<div class="risk-icon">🔴</div>
-<div class="risk-name">Failure to Register</div>
-<div class="risk-description">Must register for Self Assessment by 5 October following tax year of self-employment start. Late registration = penalties even if no tax owed</div>
-<div class="click-instruction">Click to see how to prevent</div>
-</div>
-<div class="card-back critical">
-<div class="status-badge critical">✅ Mitigation Strategy</div>
-<div class="back-content">
-<div class="back-content-section">
-<div class="back-content-title">Early & Timely Registration</div>
-<ul>
-<li>Register immediately when self-employment starts</li>
-<li>Don't wait until tax year-end</li>
-<li>Mark deadline: 5 October (following tax year)</li>
-<li>Set calendar reminder 3 months in advance</li>
-<li>Use online HMRC portal for registration</li>
-<li>Keep confirmation of registration safely</li>
-<li>Get UTR number for tax returns</li>
-<li>Note Self Assessment deadlines once registered</li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-</div>
+    <!-- CARD 2 -->
+    <div class="compliance-card" onclick="this.classList.toggle('flipped')">
+      <div class="card-inner">
+        <div class="card-front">
+          <div class="risk-icon">❌</div>
+          <div class="risk-name">Inaccurate Returns</div>
+          <div class="risk-description">Errors trigger penalties</div>
+          <div class="click-instruction">Click to see how to prevent</div>
+        </div>
+        <div class="card-back critical">
+          <div class="status-badge critical">✅ Mitigation Strategy</div>
+          <div class="back-content">
+            <ul>
+              <li>Use accounting software</li>
+              <li>Check figures carefully</li>
+              <li>Keep receipts</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
 
-<!-- Card 5: Cash Flow Crisis → Set Aside Tax Funds -->
-<div class="compliance-card" onclick="this.classList.toggle('flipped')">
-<div class="card-inner">
-<div class="card-front">
-<div class="risk-icon">💸</div>
-<div class="risk-name">Cash Flow Crisis</div>
-<div class="risk-description">Tax bill arrives but funds aren't available. Tempts desperate business decisions or forces personal debt when payment falls due</div>
-<div class="click-instruction">Click to see how to prevent</div>
-</div>
-<div class="card-back critical">
-<div class="status-badge critical">✅ Mitigation Strategy</div>
-<div class="back-content">
-<div class="back-content-section">
-<div class="back-content-title">Tax Savings Fund Setup</div>
-<ul>
-<li>Open separate tax savings account immediately</li>
-<li>Transfer 25-35% of profit monthly automatically</li>
-<li>Calculate based on estimated tax liability</li>
-<li>Use accounting software for tracking</li>
-<li>Set up automatic monthly transfers</li>
-<li>Never touch fund for other purposes</li>
-<li>By January, funds ready for tax payment</li>
-<li>Reduces financial stress significantly</li>
-</ul>
-</div>
-</div>
-</div>
-</div>
+    <!-- CARD 3 -->
+    <div class="compliance-card" onclick="this.classList.toggle('flipped')">
+      <div class="card-inner">
+        <div class="card-front">
+          <div class="risk-icon">📋</div>
+          <div class="risk-name">Inadequate Records</div>
+          <div class="risk-description">Poor evidence leads to estimates</div>
+          <div class="click-instruction">Click to see how to prevent</div>
+        </div>
+        <div class="card-back critical">
+          <div class="status-badge critical">✅ Mitigation Strategy</div>
+          <div class="back-content">
+            <ul>
+              <li>Store records for 5 years</li>
+              <li>Backup digitally</li>
+              <li>Organise by tax year</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
 
-<!-- Card 6: Tax Law Changes → Seek Professional Advice -->
-<div class="compliance-card" onclick="this.classList.toggle('flipped')">
-<div class="card-inner">
-<div class="card-front">
-<div class="risk-icon">📚</div>
-<div class="risk-name">Tax Law Changes</div>
-<div class="risk-description">Missing updates on tax allowances, deadlines, or regulations can result in non-compliance or missing legitimate tax relief opportunities</div>
-<div class="click-instruction">Click to see how to prevent</div>
-</div>
-<div class="card-back critical">
-<div class="status-badge critical">✅ Mitigation Strategy</div>
-<div class="back-content">
-<div class="back-content-section">
-<div class="back-content-title">Professional & Ongoing Education</div>
-<ul>
-<li>Find accountant specializing in fitness industry</li>
-<li>Start relationship in first tax year</li>
-<li>Budget £300-600 annually for accountant</li>
-<li>Provide records monthly (not year-end)</li>
-<li>Discuss tax planning opportunities</li>
-<li>Read HMRC self-employment guides</li>
-<li>Follow HMRC updates and bulletins</li>
-<li>Join professional bodies (CIMSPA, REPS)</li>
-</ul>
-</div>
-</div>
-</div>
-</div>
+    <!-- CARD 4 -->
+    <div class="compliance-card" onclick="this.classList.toggle('flipped')">
+      <div class="card-inner">
+        <div class="card-front">
+          <div class="risk-icon">🔴</div>
+          <div class="risk-name">Failure to Register</div>
+          <div class="risk-description">Late registration causes penalties</div>
+          <div class="click-instruction">Click to see how to prevent</div>
+        </div>
+        <div class="card-back critical">
+          <div class="status-badge critical">✅ Mitigation Strategy</div>
+          <div class="back-content">
+            <ul>
+              <li>Register immediately</li>
+              <li>Mark 5 October deadline</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
 
-</div>
-</div>
+    <!-- CARD 5 -->
+    <div class="compliance-card" onclick="this.classList.toggle('flipped')">
+      <div class="card-inner">
+        <div class="card-front">
+          <div class="risk-icon">💸</div>
+          <div class="risk-name">Cash Flow Crisis</div>
+          <div class="risk-description">No funds for tax bill</div>
+          <div class="click-instruction">Click to see how to prevent</div>
+        </div>
+        <div class="card-back critical">
+          <div class="status-badge critical">✅ Mitigation Strategy</div>
+          <div class="back-content">
+            <ul>
+              <li>Save 25–35% monthly</li>
+              <li>Separate tax account</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
 
-<script>
-(function() {
-document.documentElement.style.visibility = 'visible';
-document.body.style.visibility = 'visible';
-})();
-</script>
+    <!-- CARD 6 -->
+    <div class="compliance-card" onclick="this.classList.toggle('flipped')">
+      <div class="card-inner">
+        <div class="card-front">
+          <div class="risk-icon">📚</div>
+          <div class="risk-name">Tax Law Changes</div>
+          <div class="risk-description">Missing updates causes non-compliance</div>
+          <div class="click-instruction">Click to see how to prevent</div>
+        </div>
+        <div class="card-back critical">
+          <div class="status-badge critical">✅ Mitigation Strategy</div>
+          <div class="back-content">
+            <ul>
+              <li>Use an accountant</li>
+              <li>Follow HMRC updates</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
 </body>
 </html>
